Fix alignment issues in data table components

--- a/app/stylesheet/data-table.scss
+++ b/app/stylesheet/data-table.scss
@@ -40,3 +40,9 @@
     align-items: center;
   }
 }
+
+.miq-pagination .cds--pagination__left {
+  .cds--pagination__text {
+    margin-bottom: 2px;
+  }
+}
